--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5353",
+  "proxy": "http://127.0.0.1:5353",
 
   "devDependencies": {
     "eslint": "^6.6.0",
