--- a/client/package.json
+++ b/client/package.json
@@ -39,12 +39,12 @@
     ]
   },
   "proxy": "http://127.0.0.1:5353",
-
   "devDependencies": {
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0"
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.3.0"
   }
 }
